--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "React 3D Carousel component",
   "main": "src/Carousel3D.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js",
+    "build:example": "webpack --config example/webpack.config.js"
   },
   "repository": {
     "type": "git",
