--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/agentreno/react-3d-carousel#readme",
   "dependencies": {
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-dom": "^16.3.1",
+    "styled-components": "^3.2.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
