--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "src/Carousel3D.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js",
-    "build:example": "webpack --config example/webpack.config.js"
+    "build": "webpack --mode 'development' --config webpack.config.js",
+    "build:example": "webpack --mode 'development' --config example/webpack.config.js"
   },
   "repository": {
     "type": "git",
