--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "react-3d-carousel",
   "version": "0.1.0",
   "description": "React 3D Carousel component",
-  "main": "src/Carousel3D.js",
+  "main": "dist/Carousel3D.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode 'development' --config webpack.config.js",
-    "build:example": "webpack --mode 'development' --config example/webpack.config.js"
+    "build:example": "webpack --mode 'development' --config example/webpack.config.js",
+    "build:prod": "webpack --mode 'production' --config webpack.config.js"
   },
   "repository": {
     "type": "git",
